--- a/type.html
+++ b/type.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	    <title>Buttons</title>
+	    <title>Typography</title>
 
 		<!-- 1140 grid - more info at http://cssgrid.net/ -->
 	    <link href="css/grid/1140.css" rel="stylesheet">
