--- a/buttons.html
+++ b/buttons.html
@@ -20,23 +20,23 @@
 			<h1>Buttons</h1>
 
 			<h3>Basic</h3>
-			<p><a href="#" class="btn">Press me</a></p>
+			<p><a href="#" class="button">Press me</a></p>
 
 			<h4>In a parapgraph</h4>
-			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas <a href="#" class="btn">Press me</a>. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas <a href="#" class="button">Press me</a>. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
 
 			<h4>Different sizes</h4>
-			<p><a href="#" class="btn small">Small</a></p>
-			<p><a href="#" class="btn">Default</a></p>
-			<p><a href="#" class="btn large">Large</a></p>
+			<p><a href="#" class="button small">Small</a></p>
+			<p><a href="#" class="button">Default</a></p>
+			<p><a href="#" class="button large">Large</a></p>
 
 			<h3>Primary call to action</h3>
-			<p><a href="#" class="btn primary">Press me</a></p>
+			<p><a href="#" class="button primary">Press me</a></p>
 
 			<h3>...with 3D effect</h3>
-			<p><a href="#" class="btn small primary threeD">Push me down</a></p>
-			<p><a href="#" class="btn primary threeD">Push me down</a></p>
-			<p><a href="#" class="btn large primary threeD">Push me down</a></p>
+			<p><a href="#" class="button small primary threeD">Push me down</a></p>
+			<p><a href="#" class="button primary threeD">Push me down</a></p>
+			<p><a href="#" class="button large primary threeD">Push me down</a></p>
 
 		</div>
 	</body>
