fix the firefox submit button line-height bug

--- a/forms.html
+++ b/forms.html
@@ -3,13 +3,14 @@
     <head>
 	    <title>MOSTOs Forms</title>
 
-		<!-- MOSTO components -->
-	    <link href="css/type.css" rel="stylesheet">
-	    <link href="css/buttons.css" rel="stylesheet">
         <link href="css/forms.css" rel="stylesheet">
 
 		<!-- Just some styles for the demo -->
 		<style>
+			body {
+				color: #444444;
+				font: 13px/18px Arial, Helvetica, Geneva, sans-serif;
+			}
 			.container {
 				width: 100%;
 				margin: 18px auto;
@@ -24,9 +25,6 @@
 				background: #ccc;
 			}
 
-			h3,h4,h5 {
-				margin: 18px 0 9px;
-			}
 		</style>
 
 		<!-- Do something with this crap! -->
