change dimensions to use .size*

--- a/forms.html
+++ b/forms.html
@@ -258,52 +258,52 @@
             <h3>Dimensions</h3>
             <form class="form-horizontal">
                 <label>
-                    <div>Span 1</div>
-                    <input type="text" tabindex="1" class="span1">
+                    <div>Size 1</div>
+                    <input type="text" tabindex="1" class="size1">
                 </label>
                 <label>
-                    <div>Span 2</div>
-                    <input type="text" tabindex="1" class="span2">
+                    <div>Size 2</div>
+                    <input type="text" tabindex="1" class="size2">
                 </label>
                 <label>
-                    <div>Span 3</div>
-                    <input type="text" tabindex="1" class="span3">
+                    <div>Size 3</div>
+                    <input type="text" tabindex="1" class="size3">
                 </label>
                 <label>
-                    <div>Span 4</div>
-                    <input type="text" tabindex="1" class="span4">
+                    <div>Size 4</div>
+                    <input type="text" tabindex="1" class="size4">
                 </label>
                 <label>
-                    <div>Span 5</div>
-                    <input type="text" tabindex="1" class="span5">
+                    <div>Size 5</div>
+                    <input type="text" tabindex="1" class="size5">
                 </label>
                 <label>
-                    <div>Span 6</div>
-                    <input type="text" tabindex="1" class="span6">
+                    <div>Size 6</div>
+                    <input type="text" tabindex="1" class="size6">
                 </label>
                 <label>
-                    <div>Span 7</div>
-                    <input type="text" tabindex="1" class="span7">
+                    <div>Size 7</div>
+                    <input type="text" tabindex="1" class="size7">
                 </label>
                 <label>
-                    <div>Span 8</div>
-                    <input type="text" tabindex="1" class="span8">
+                    <div>Size 8</div>
+                    <input type="text" tabindex="1" class="size8">
                 </label>
 				<label>
-                    <div>Span 9</div>
-                    <input type="text" tabindex="1" class="span9">
+                    <div>Size 9</div>
+                    <input type="text" tabindex="1" class="size9">
                 </label>
 				<label>
-                    <div>Span 10</div>
-                    <input type="text" tabindex="1" class="span10">
+                    <div>Size 10</div>
+                    <input type="text" tabindex="1" class="size10">
                 </label>
 				<label>
-                    <div>Span 11</div>
-                    <input type="text" tabindex="1" class="span11">
+                    <div>Size 11</div>
+                    <input type="text" tabindex="1" class="size11">
                 </label>
 				<label>
-                    <div>Span 12</div>
-                    <input type="text" tabindex="1" class="span12">
+                    <div>Size 12</div>
+                    <input type="text" tabindex="1" class="size12">
                 </label>
                 <label>
                     <div>Mini</div>
@@ -337,7 +337,7 @@
                 <label>
                     <div>Amount</div>
                     <i class="prepend">$</i>
-                    <input type="text" placeholder="Amount" tabindex="1" class="span3">
+                    <input type="text" placeholder="Amount" tabindex="1" class="size3">
                     <span class="message">How much would you like to donate?<span>
                 </label>
 
@@ -352,7 +352,7 @@
                 <h4>Append</h4>
                 <label>
                     <div>Amount</div>
-                    <input type="text" placeholder="Amount" tabindex="1" class="appended span3">
+                    <input type="text" placeholder="Amount" tabindex="1" class="appended size3">
                     <i class="append">&euro;</i>
                     <span class="message">How much would you like to donate?<span>
                 </label>
@@ -361,7 +361,7 @@
                 <label>
                     <div>Amount</div>
                     <i class="prepend">$</i>
-                    <input type="text" placeholder="Amount" tabindex="1" class="appended span3">
+                    <input type="text" placeholder="Amount" tabindex="1" class="appended size3">
                     <i class="append">.00</i>
                     <span class="message">How much would you like to donate?<span>
                 </label>
@@ -369,19 +369,19 @@
                     <div>Phone no.</div>
                     <label>
                         <i class="prepend">+</i>
-                        <input type="text" class="span1" placeholder="44" tabindex="1">
+                        <input type="text" class="size1" placeholder="44" tabindex="1">
                     </label>
                     -
                     <label>
-                        <input type="text" class="span4" tabindex="1">
+                        <input type="text" class="size4" tabindex="1">
                     </label>
                     -
                     <label>
-                        <input type="text" class="span4" tabindex="1">
+                        <input type="text" class="size4" tabindex="1">
                     </label>
                     -
                     <label>
-                        <input type="text" class="span2 appended" tabindex="1">
+                        <input type="text" class="size2 appended" tabindex="1">
                         <i class="append">ext.</i>
                     </label>
                 </div>
@@ -392,7 +392,7 @@
                 <label>
                     <div>Amount</div>
                     <i class="prepend">$</i>
-                    <input type="text" placeholder="Amount" tabindex="1" class="appended span3">
+                    <input type="text" placeholder="Amount" tabindex="1" class="appended size3">
                     <i class="append">.00</i>
                     <span class="message">How much would you like to donate?<span>
                 </label>
@@ -436,19 +436,19 @@
                     <div>Phone no.</div>
                     <label>
                         <i class="prepend">+</i>
-                        <input type="text" class="span1" placeholder="44" tabindex="1">
+                        <input type="text" class="size1" placeholder="44" tabindex="1">
                     </label>
                     -
                     <label>
-                        <input type="text" class="span4" tabindex="1">
+                        <input type="text" class="size4" tabindex="1">
                     </label>
                     -
                     <label>
-                        <input type="text" class="span4" tabindex="1">
+                        <input type="text" class="size4" tabindex="1">
                     </label>
                     -
                     <label>
-                        <input type="text" class="span2 appended" tabindex="1">
+                        <input type="text" class="size2 appended" tabindex="1">
                         <i class="append">ext.</i>
                     </label>
                     <span class="message">Please fill in all fields</span>
@@ -486,24 +486,24 @@
 				<div class="label-group inline">
 					<label>
 						Username
-						<input type="text" placeholder="Username" class="span8" tabindex="1">
+						<input type="text" placeholder="Username" class="size8" tabindex="1">
 					</label>
 					<label>
 						Password
-						<input type="password" placeholder="Password" class="span8" tabindex="1">
+						<input type="password" placeholder="Password" class="size8" tabindex="1">
 					</label>
 				</div>
 
 				<div class="label-group inline">
 					<label>
 						Day
-						<select class="span5">
+						<select class="size5">
 							<option>Monday</option>
 						</select>
 					</label>
 					<label>
 						Month
-						<select class="span5">
+						<select class="size5">
 							<option>January</option>
 						</select>
 					</label>
