--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<style>
 			body {
 				color: #444444;
-				font: 13px/18px Arial, Helvetica, Geneva, sans-serif;
+				font-family: Arial, Helvetica, Geneva, sans-serif;
 			}
 			.container {
 				width: 100%;
@@ -464,6 +464,21 @@
 
 			<hr>
 
+			<h3>Log in form</h3>
+			<form>
+				<div class="label-group inline">
+					<label>
+						<input type="text" placeholder="Username" class="size8" tabindex="1">
+					</label>
+					<label>
+						<input type="password" placeholder="Password" class="size8" tabindex="1">
+					</label>
+					<button type="submit" class="button primary">Log in</button>
+				</div>
+			</form>
+
+			<hr>
+
 			<h3>Exceptions</h3>
 
 			<h4>Stacked form with horizontal inputs</h4>
@@ -483,16 +498,6 @@
                     </label>
                 </div>
 
-				<div class="label-group inline">
-					<label>
-						Username
-						<input type="text" placeholder="Username" class="size8" tabindex="1">
-					</label>
-					<label>
-						Password
-						<input type="password" placeholder="Password" class="size8" tabindex="1">
-					</label>
-				</div>
 
 				<div class="label-group inline">
 					<label>
