--- a/stacked.html
+++ b/stacked.html
@@ -9,10 +9,10 @@
 		<style>
 			body {
 				color: #444444;
-				font-family: Arial, Helvetica, Geneva, sans-serif;
+				font: 13px/18px Arial, Helvetica, Geneva, sans-serif;
 			}
 			.container {
-				width: 500px;
+				width: 550px;
 				margin: 18px 0;
 				padding: 0 20px;
 			}
