Responsive, label > div bulletproofing, default submit button posiiton
Horizontal forms have a breakpoint that turns them into stacked forms
on small screens
Horizontal forms default submit button position is under the input, not
far left
The forms work ok with normalize.css
The *pend use border-box eliminating the need for IE hacks

--- a/index.html
+++ b/index.html
@@ -27,16 +27,6 @@
 
 		</style>
 
-		<!-- Do something with this crap! -->
-		<!--[if lt IE 9]>
-			<style>
-				.prepend,
-				.append {
-					padding-bottom: 5px;
-				}
-			</style>
-		<![endif]-->
-
 	</head>
 
     <body>
@@ -212,6 +202,7 @@
                     <input type="email" placeholder="Email address" tabindex="1">
                     <span class="message">Must be a valid email address</span>
                 </label>
+				<button type="submit" class="button">Login</button>
             </form>
 
             <h4>Horizontal form with help below</h4>
