--- a/normalized.html
+++ b/normalized.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-	    <title>MOSTOs Forms</title>
+	    <title>MOSTOs Forms with normalize.css</title>
 
-        <link href="css/forms.css" rel="stylesheet">
+        <link href="css/normalize.css" rel="stylesheet">
+		<link href="css/forms.css" rel="stylesheet">
 
 		<!-- Just some styles for the demo -->
 		<style>
@@ -25,6 +26,9 @@
 				background: #ccc;
 			}
 
+
+
+
 		</style>
 
 	</head>
@@ -32,6 +36,7 @@
     <body>
 
         <div class="container content">
+			<p>Just a little test to make sure normalize.css doesn't break anything.</p>
 			<form>
 
 				<fieldset>
