Demos, readme and licenses

--- a/demo/horizontal.html
+++ b/demo/horizontal.html
@@ -3,7 +3,7 @@
     <head>
 	    <title>MOSTOs Forms - Horizontal</title>
 
-        <link href="css/forms.css" rel="stylesheet">
+        <link href="../css/forms.css" rel="stylesheet">
 
 		<!-- Just some styles for the demo -->
 		<style>
