--- a/demo/index.html
+++ b/demo/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-	    <title>MOSTOs Forms</title>
+	    <title>MOSTOs Forms demo</title>
 
-        <link href="css/forms.css" rel="stylesheet">
+        <link href="../css/forms.css" rel="stylesheet">
 
 		<!-- Just some styles for the demo -->
 		<style>
@@ -26,6 +26,10 @@
 				background: #ccc;
 			}
 
+			a {
+				color: #00aae7;
+			}
+
 		</style>
 
 	</head>
@@ -35,6 +39,7 @@
         <div class="container content">
 
 		    <h1>MOSTO Forms</h1>
+			<p>This demo has a bit of everything to demonstrate all the different settings and features that are available. There are also simpler demos of a <a href="stacked.html">stacked form</a> and a <a href="horizontal.html">horizontal form</a></p>
 
             <h3>Basic "Stacked" Form - <small>All inputs below the labels</small></h3>
 
@@ -586,7 +591,7 @@
 					<legend>Account details</legend>
 					<label>
 						<div>Username</div>
-						<input type="text" placeholder="Username" tabindex="1" autofocus="autofocus">
+						<input type="text" placeholder="Username" tabindex="1">
 						<span class="message hint">Must be at least five characters</span>
 					</label>
 					<label>
