--- a/demo/stacked.html
+++ b/demo/stacked.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-	    <title>MOSTOs Forms</title>
+	    <title>MOSTOs Forms - stacked demo</title>
 
-        <link href="css/forms.css" rel="stylesheet">
+        <link href="../css/forms.css" rel="stylesheet">
 
 		<!-- Just some styles for the demo -->
 		<style>
