--- a/demo/index.html
+++ b/demo/index.html
@@ -45,10 +45,7 @@
 
 		    <form>
 
-                <label>
-                    Name
-                    <input type="text" placeholder="Name" tabindex="1" autofocus>
-                </label>
+                <label>Name<input type="text" placeholder="Name" tabindex="1" autofocus></label>
 
                 <label>
                     Email address
@@ -115,10 +112,7 @@
 
             <form class="form-horizontal">
 
-                <label>
-                    <div>Name</div>
-                    <input type="text" placeholder="Name" tabindex="1">
-                </label>
+                <label><div>Name</div><input type="text" placeholder="Name" tabindex="1"></label>
 
                 <label>
                     <div>Email</div>
@@ -127,7 +121,7 @@
 
 				<label>
                     <div>Your message</div>
-                    <textarea tabindex="1"></textarea>
+                    <textarea tabindex="1" placeholder="Your message"></textarea>
                 </label>
 
                 <label>
@@ -158,7 +152,6 @@
 
 				<div class="submit-wrapper">
 					<button type="submit" class="button primary">Send</button>
-					<a href="#" class="button">Cancel</a>
 				</div>
 
 			</form>
@@ -184,29 +177,19 @@
 
 			<h4>Stacked with messages inline</h4>
 			<form class="help-inline">
-                <label>
-                    <div>Name</div>
-                    <input type="text" placeholder="Name" tabindex="1">
-                    <span class="message">Please enter your full name</span>
-                </label>
+                <label><div>Name</div><input type="text" placeholder="Name" tabindex="1"><span class="message">Please enter your full name</span></label>
                 <label>
                     <div>Email address</div>
-                    <input type="email" placeholder="Email address" tabindex="1">
-                    <span class="message">Must be a valid email address</span>
+                    <input type="email" placeholder="Email address" tabindex="1"><span class="message">Must be a valid email address</span>
                 </label>
             </form>
 
             <h4>Horizontal form</h4>
             <form class="form-horizontal">
-                <label>
-                    <div>Name</div>
-                    <input type="text" placeholder="Name" tabindex="1">
-                    <span class="message">Please enter your full name</span>
-                </label>
+                <label><div>Name</div><input type="text" placeholder="Name" tabindex="1"><span class="message">Please enter your full name</span></label>
                 <label>
                     <div>Email address</div>
-                    <input type="email" placeholder="Email address" tabindex="1">
-                    <span class="message">Must be a valid email address</span>
+                    <input type="email" placeholder="Email address" tabindex="1"><span class="message">Must be a valid email address</span>
                 </label>
 				<button type="submit" class="button">Login</button>
             </form>
@@ -313,7 +296,7 @@
                 <label>
                     <div>Medium</div>
                     <input type="text" tabindex="1">
-                    <span>(default)</span>
+                    <span class="message">(default)</span>
                 </label>
                 <label>
                     <div>Large</div>
@@ -362,26 +345,6 @@
                     <i class="append">.00</i>
                     <span class="message">How much would you like to donate?<span>
                 </label>
-                <div class="label-group">
-                    <div>Phone no.</div>
-                    <label>
-                        <i class="prepend">+</i>
-                        <input type="text" class="size1" placeholder="44" tabindex="1">
-                    </label>
-                    -
-                    <label>
-                        <input type="text" class="size4" tabindex="1">
-                    </label>
-                    -
-                    <label>
-                        <input type="text" class="size4" tabindex="1">
-                    </label>
-                    -
-                    <label>
-                        <input type="text" class="size2 appended" tabindex="1">
-                        <i class="append">ext.</i>
-                    </label>
-                </div>
 			</form>
 
 			<form>
@@ -426,30 +389,6 @@
                     <input type="email" value="bob@something.domain" tabindex="1">
                     <span class="message">Please use a valid email address</span>
                 </label>
-            </form>
-
-            <form class="form-horizontal">
-                <div class="label-group error">
-                    <div>Phone no.</div>
-                    <label>
-                        <i class="prepend">+</i>
-                        <input type="text" class="size1" placeholder="44" tabindex="1">
-                    </label>
-                    -
-                    <label>
-                        <input type="text" class="size4" tabindex="1">
-                    </label>
-                    -
-                    <label>
-                        <input type="text" class="size4" tabindex="1">
-                    </label>
-                    -
-                    <label>
-                        <input type="text" class="size2 appended" tabindex="1">
-                        <i class="append">ext.</i>
-                    </label>
-                    <span class="message">Please fill in all fields</span>
-                </div>
             </form>
 
 			<h5>Checkbox</h5>
@@ -531,9 +470,9 @@
 				</div>
 			</form>
 
-			<form class="form-horizontal">
 
-				<h4>Horizontal form with inputs below</h4>
+			<h4>Horizontal form with inputs below</h4>
+			<form class="form-horizontal">
 				<label class="input-below">
                     <div>Which of the following beers is your favourite?</div>
                     <select tabindex="1">
@@ -562,8 +501,10 @@
                         <input type="checkbox" name="notifications" value="giveaway" tabindex="1">Self driving cars for returning from events with free beer
                     </label>
                 </div>
+			</form>
 
-                <h4>Horizontal form with stacked inputs</h4>
+            <h4>Horizontal form with stacked inputs</h4>
+			<form class="form-horizontal">
 				<div class="label-group stacked">
                     <div>What kind of things would you like to to receive alerts about?</div>
                     <label>
